parameterized-macro/tests/fail/inequal_amount_of_arg.stderr
error: custom attribute panicked
 --> $DIR/inequal_amount_of_arg.rs:3:1
  |
3 | #[parameterized(v = { "a", "b" }, w = { 1, 2, 3 })]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = help: message: [parameterized-macro] error: Inconsistent argument list length for 'w'; all inputs (v, w) should have equal length
